--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,17 @@ body {
 a {
   color: #00B7FF;
 }
+
+#data_reader {
+    margin-left: auto;
+    margin-right: 15pt;
+    float: right;
+}
+
+.saving_field {
+    display: block;
+}
+
+#canvas {
+    float: left;
+}
