--- a/MarsroverWpf/MarsroverWpf/MainWindow.xaml
+++ b/MarsroverWpf/MarsroverWpf/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:MarsroverWpf"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="Marsrover" Height="800" Width="800"
+        Title="Marsrover" Height="600" Width="1200"
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}">
     <Window.Resources>
@@ -31,12 +31,12 @@
             </TransformGroup>
         </Grid.RenderTransform>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="50*" />
-            <ColumnDefinition Width="220*" />
+            <ColumnDefinition Width="200*" />
+            <ColumnDefinition Width="600*" />
+            <ColumnDefinition Width="400*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="220*" />
-            <RowDefinition Height="50*" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <StackPanel Grid.Column="0">
             <TextBox Text="{Binding ServiceUrl, UpdateSourceTrigger=PropertyChanged}" 
@@ -57,11 +57,13 @@
                          Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                          materialDesign:HintAssist.Hint="Start X"
                          FontSize="20"
+                         Width="100"
                          Margin="5,5,-0.4,0"/>
                 <TextBox Text="{Binding StartY, UpdateSourceTrigger=PropertyChanged}" 
                          Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                          materialDesign:HintAssist.Hint="Start Y"
                          FontSize="20"
+                         Width="100"
                          Margin="5,5,-0.4,0" />
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0, 5, 0 ,0">
@@ -69,22 +71,24 @@
                          Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                          materialDesign:HintAssist.Hint="Finish X"
                          FontSize="20"
+                         Width="100"
                          Margin="5,5,-0.4,0"/>
                 <TextBox Text="{Binding FinishY, UpdateSourceTrigger=PropertyChanged}" 
                          Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                          materialDesign:HintAssist.Hint="Finish Y"
                          FontSize="20"
+                         Width="100"
                          Margin="5,5,-0.4,0" />
             </StackPanel>
             <Button Command="{Binding FindPathCommand}" Style="{StaticResource MaterialDesignRaisedButton}" Margin="0, 5, 0, 0">
                 Find Path
             </Button>
         </StackPanel>
-        <ItemsControl Grid.Column="1"
-                  ItemsSource="{Binding Path=Field.Tiles}" Margin="10,10,9.6,0.2">
+        <ItemsControl Grid.Row="0" Grid.Column="1"
+                  ItemsSource="{Binding Path=Field.Tiles}" Margin="10,10,10,10">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <UniformGrid Rows="{Binding N}" Columns="{Binding M}">
+                    <UniformGrid Rows="{Binding Path=Field.N}" Columns="{Binding Path=Field.M}">
                     </UniformGrid>
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
@@ -96,6 +100,16 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
-        <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding PathString}"/>
+        <StackPanel Grid.Row="0" Grid.Column="2">
+            <TextBox Text="{Binding MapString, UpdateSourceTrigger=PropertyChanged}" 
+                         Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                         materialDesign:HintAssist.Hint="Map Json"
+                         FontSize="20"
+                         Margin="5,5,-0.4,0" Height="500"
+                         AcceptsReturn="True"/>
+            <Button Command="{Binding SetMapCommand}" Style="{StaticResource MaterialDesignRaisedButton}" Margin="0, 5, 0, 0">
+                Set map
+            </Button>
+        </StackPanel>
     </Grid>
 </Window>
